# yandex-gpt-api-client-python

./: .gitlab-ci.yml  example.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties
yafma/: __init__.py  base_client.py  config.py  errors.py  models.py  yandexgpt_client.py
yafma/embedding/: __init__.py  client.py  config.py  models.py
yafma/gpt/: __init__.py  client.py  config.py  models.py
yandexgptapi/: __init__.py  config.py  errors.py  main.py  models.py  yandex_llm_client.py
