[build-system]
requires = ["setuptools>=69,<70", "wheel>=0.43,<0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "yandex-foundation-models-api-client"
version = "0.5.0"
description = "Synchronous (with “async” support) client for Yandex's Foundation Models API (YandexGPT and YandexART). Fire off long-running “AI” generation tasks without sweating the wait."
authors = [{ name = "Vladimir (vapronva)", email = "git@vprw.ru" }]
requires-python = ">= 3.12"
license = { file = "LICENSE" }
dependencies = [
  "httpx>=0.25,<1",
  "pydantic>=2,<3",
  "typing_extensions>=4,<5",
  "pillow>=10,<11",
]
keywords = [
  "yandex foundation models",
  "rest api client",
  "yandex cloud",
  "yandexgpt",
  "yandexart",
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Development Status :: 2 - Pre-Alpha",
]

[project.urls]
Homepage = "https://gl.vprw.ru/vapronva/yandex-foundation-models-api-client-python"

[tool.setuptools]
packages = ["yafma"]
